debug util cleanup